--- a/app/src/main/res/layout/activity_custom_view_three.xml
+++ b/app/src/main/res/layout/activity_custom_view_three.xml
@@ -10,5 +10,5 @@
     <com.fpp.status.view.CustomViewThree
         android:id="@+id/custom_lv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></com.fpp.status.view.CustomViewThree>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
