--- a/app/src/main/res/layout/activity_dh.xml
+++ b/app/src/main/res/layout/activity_dh.xml
@@ -20,6 +20,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp" />
     <LinearLayout
+        android:visibility="gone"
         android:background="#ffffff"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
@@ -30,21 +31,21 @@
         <TextView
             android:textSize="20dp"
             android:textColor="#000000"
-            android:text="工资收入证明"
+            android:text="工"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="45dp" />
         <TextView
             android:textSize="10dp"
             android:textColor="#000000"
-            android:text="        兹证明付朋朋是我单位员工，身份证号：610124199108247517，现为我公司Android项目部下Android开发程序员，平均月收入为2000元整（人名币）。"
+            android:text="全"
             android:gravity="center|left"
             android:layout_width="match_parent"
             android:layout_height="60dp" />
         <TextView
             android:textSize="10dp"
             android:textColor="#000000"
-            android:text="        此证明仅限用于申请公租房使用，不作其他用途。"
+            android:text=" "
             android:gravity="center|left"
             android:layout_width="match_parent"
             android:layout_height="30dp" />
@@ -56,7 +57,7 @@
             <TextView
                 android:textSize="10dp"
                 android:textColor="#000000"
-                android:text="        特此证明"
+                android:text="      "
                 android:gravity="center|left"
                 android:layout_width="match_parent"
                 android:layout_height="30dp" />
@@ -66,7 +67,6 @@
                 android:gravity="left"
                 android:layout_marginRight="30dp"
                 android:layout_marginLeft="180dp"
-                android:background="@drawable/zhansan"
                 android:orientation="vertical"
                 android:layout_width="80dp"
                 android:layout_height="80dp">
@@ -77,7 +77,7 @@
                 android:layout_marginRight="40dp"
                 android:layout_marginTop="30dp"
                 android:textColor="#000000"
-                android:text="济宁九点连线信息技术有限公司"
+                android:text=""
                 android:gravity="center|right"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
@@ -86,7 +86,7 @@
                 android:layout_marginRight="70dp"
                 android:textSize="10dp"
                 android:textColor="#000000"
-                android:text="2017年12月1日"
+                android:text=""
                 android:gravity="center|right"
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
@@ -94,6 +94,111 @@
                 android:layout_alignParentStart="true"
                 />
         </RelativeLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:background="@drawable/text_style"
+            android:text="全"
+            android:layout_width="18dp"
+            android:layout_height="18dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"/>
+        <TextView
+            android:text="接"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:background="@drawable/text_style"
+
+            android:layout_width="18dp"
+            android:layout_height="18dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"/>
+        <TextView
+            android:text="服"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:background="@drawable/text_style"
+            android:layout_width="18dp"
+            android:layout_height="18dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"/>
+        <TextView
+            android:text="入"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:background="@drawable/text_style"
+            android:layout_width="18dp"
+            android:layout_height="18dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"/>
+        <TextView
+            android:text="拒"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:background="@drawable/text_style"
+            android:layout_width="18dp"
+            android:layout_height="18dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"/>
+        <TextView
+            android:text="爽"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:background="@drawable/text_style"
+            android:layout_width="18dp"
+            android:layout_height="18dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"/>
+        <TextView
+            android:text="撤"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:background="@drawable/text_style"
+            android:layout_width="18dp"
+            android:layout_height="18dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"/>
+        <TextView
+            android:text="全"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"/>
+        <TextView
+            android:text="全"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"/>
+
+
 
     </LinearLayout>
 
