--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,4 +38,10 @@
         <!--<item name="android:textSize">@dimen/text_16_sp</item>-->
     </style>
 
+
+    <style name="ItemStyle">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">45dp</item>
+    </style>
+
 </resources>
