倒计时功能测试。

--- a/app/src/main/res/layout/activity_custom_view_one.xml
+++ b/app/src/main/res/layout/activity_custom_view_one.xml
@@ -4,9 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    <com.fpp.status.view.CustomViewOne
-        android:id="@+id/title_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </com.fpp.status.view.CustomViewOne>
+    <TextView
+        android:id="@+id/show"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="开始倒计时" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:onClick="restart"
+        android:text="开始" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:onClick="oncancel"
+        android:text="结束" />
 </LinearLayout>
